fix: fix the nav buttons (scroll position) and spacing in contact page

--- a/src/css/contact.css
+++ b/src/css/contact.css
@@ -111,7 +111,7 @@
   margin-bottom: 100px;
   background-color: var(--cod-gray-lighter);
   z-index: 0;
-  border: 2px dashed var(--yellow-main);
+  border: 3px dashed var(--yellow-main);
   transition: all 0.3s ease;
   border-radius: 11px;
   width: 60%;
@@ -174,6 +174,9 @@
 .contact-buttons {
   width: fit-content;
   display: flex;
+  margin: auto;
+  margin-top: 30px;
+  white-space: nowrap;
 }
 
 .contact-buttons a,
@@ -199,11 +202,6 @@
   background: var(--yellow-main);
 }
 
-.contact-buttons {
-  margin: auto;
-  margin-top: 60px;
-  white-space: nowrap;
-}
 
 .contact-buttons a,
 .contact-buttons button {
